perf: improvements on performance and security
